Remove call to deprecated methods